# pose3dkit

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/pose3dkit/: __init__.py  normalization.py
src/pose3dkit/metrics/: __init__.py  mpjpe.py
src/pose3dkit/torchmetrics/: __init__.py  mpjpe.py
tests/: test_mpjpe.py  test_normalization.py
